--- a/assets/package.json
+++ b/assets/package.json
@@ -1,5 +1,11 @@
 {
-    "scripts": {
-      "deploy": "cd .. && mix assets.deploy && rm -f _build/esbuild*"
-    }
-  }
+  "scripts": {
+    "deploy": "cd .. && mix assets.deploy && rm -f _build/esbuild*"
+  },
+  "name": "assets",
+  "version": "1.0.0",
+  "description": "ecommercewebsite",
+  "main": "tailwind.config.js",
+  "author": "Marcus Lau",
+  "license": "ISC"
+}
