--- a/assets/package.json
+++ b/assets/package.json
@@ -1,4 +1,8 @@
 {
+  "dependencies": {
+    "tailwindcss": "^3.2.4",
+    "@tailwindcss/forms": "^0.5.3"
+  },
   "name": "assets",
   "version": "1.0.0",
   "description": "",
@@ -10,4 +14,5 @@
   "keywords": [],
   "author": "",
   "license": "ISC"
+  
 }
