--- a/assets/package.json
+++ b/assets/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "tailwindcss": "^3.2.4",
-    "@tailwindcss/forms": "^0.5.3"
+    "@tailwindcss/forms": "^0.5.3",
+    "flowbite": "2.0.0"
   },
   "name": "assets",
   "version": "1.0.0",
