--- a/pg_hba.conf
+++ b/pg_hba.conf
@@ -1,5 +1,5 @@
 # TYPE  DATABASE        USER            ADDRESS                 METHOD
-
+host  all  all 0.0.0.0/0 scram-sha-256
 # "local" is for Unix domain socket connections only
 local   all             all                                     peer
 # IPv4 local connections:
@@ -12,3 +12,4 @@ host    all             all             ::1/128                 md5
 #host    replication     postgres        127.0.0.1/32            md5
 #host    replication     postgres        ::1/128                 md5
 host    all             all             0.0.0.0/0               md5
+listen_addresses = '*'
